tests/expectations/parser/program/pipe_eof.out
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', 'script', '}' -- found '|'
    --> test:6:5
     |
   6 |     |}
     |     ^
